change CategoryServiceImpl and make pagination and sorting